src/objects/Distinct_CD_BOM_Structures__c.object
<CustomObject>
    <fields>
        <fullName>APC_Code_from_Top_Level__c</fullName>
        <formula>Top_Level_Assembly__r.APC_IOD_IN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APC Code from Top Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APC_description_from_Top_Level__c</fullName>
        <formula>Top_Level_Assembly__r.APC_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APC description from Top Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bom_Structure_Name_del__c</fullName>
        <formula>CD_BOM_Structure_del__r.Name</formula>
        <label>Bom Structure Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_BOM_Structure_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD BOM Structure</label>
        <referenceTo>CD_BOM_Structure__c</referenceTo>
        <relationshipName>Top_Level_Item_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_Market_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Market Name</label>
        <referenceTo>CD_Market_Name__c</referenceTo>
        <relationshipLabel>Top Level Item</relationshipLabel>
        <relationshipName>Top_Level_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CD_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Segment</label>
        <referenceTo>CD_Segment__c</referenceTo>
        <relationshipLabel>Top Level Item</relationshipLabel>
        <relationshipName>Top_Level_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Item_Name__c</fullName>
        <formula>Child_Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Item</label>
        <referenceTo>CD_Items__c</referenceTo>
        <relationshipName>Distinct_CD_BOM_Structures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id_in_Bom_Structure__c</fullName>
        <externalId>true</externalId>
        <label>External Id in Bom Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationCode_Name__c</fullName>
        <formula>OrganizationCode__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrganizationCode Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OrganizationCode</label>
        <referenceTo>CD_Organizations__c</referenceTo>
        <relationshipName>Distinct_CD_BOM_Structures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_Level_Assembly__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top Level Assembly</label>
        <referenceTo>CD_Items__c</referenceTo>
        <relationshipName>Distinct_CD_BOM_Structures1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier_In_BOM_Structure__c</fullName>
        <formula>Top_Level_Assembly__r.Name + OrganizationCode__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Identifier In BOM Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XCRV_from_Child_Item__c</fullName>
        <formula>Child_Item__r.Item_Type__r.Item_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XCRV from Child Item</label>
        <type>Text</type>
    </fields>
    <label>CD GMT Top Level Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Top Level Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Top Level Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>